Update traditional Chinese translation.
Signed-off-by: Firefly <firefly@ossii.com.tw>
Change-Id: Iee1b17aab6527cccb2e807b6a29989025a9d4599

--- a/ossii/browser/po/zh_TW.po
+++ b/ossii/browser/po/zh_TW.po
@@ -266,11 +266,11 @@ msgstr "確定"
 
 #: js/map/handler/Map.ExternalEdit.js:106
 msgid "Inform"
-msgstr ""
+msgstr "通知"
 
 #: js/map/handler/Map.ExternalEdit.js:107
 msgid "There is no handler that can handle this format:"
-msgstr ""
+msgstr "沒有能處理此種格式的編輯器："
 
 #: js/control/Toolbar.Extensions.js:173 js/control/Control.Menubar.js:94
 #: js/control/Control.Menubar.js:154
